--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,11 @@ updates:
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
-      interval: 'weekly' 
+      interval: 'weekly'
+    open-pull-requests-limit: 10
+  
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+    open-pull-requests-limit: 10
