--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.11",
     "astro": "^5.7.5"
+  },
+  "devDependencies": {
+    "@astrojs/sitemap": "^3.3.1"
   }
-} 
+}
