--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
     "@astrojs/prism": "^3.2.0",
-    "astro": "^5.7.12"
+    "@tailwindcss/vite": "^4.1.6",
+    "astro": "^5.7.12",
+    "tailwindcss": "^4.1.6"
   }
 }
